--- a/fiindmyspace/index.html
+++ b/fiindmyspace/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FindMySpace</title>
     <style>
+      html, body {
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      height: 100%;
+    }
     </style>
   </head>
   <body>
