--- a/fiindmyspace/index.html
+++ b/fiindmyspace/index.html
@@ -5,13 +5,25 @@
     <link rel="icon" type="image/x-icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FindMySpace</title>
+    <!-- Open Sans font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
       html, body {
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-      height: 100%;
-    }
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        height: 100%;
+        font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      /* Asegurar la fuente también en elementos de formulario */
+      button, input, select, textarea {
+        font-family: inherit;
+      }
     </style>
   </head>
   <body>
